appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "50%,26%"
- inputText: " ЗМІНЕНО"
- hideKeyboard
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/08-edited-unsaved
# закрити хрестиком, НЕ зберігаючи
- tapOn:
    point: "90%,20%"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/08-after-close
