appId: com.casper3.f-tracking-app
---
- swipe:
    start: "50%,30%"
    end: "50%,80%"
- swipe:
    start: "50%,30%"
    end: "50%,80%"
- waitForAnimationToEnd
- tapOn: ".*Профіль здоров'я.*"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/35-banner-tap
