appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "201,197"
- eraseText: 30
- inputText: "Аудит звичка"
- tapOn:
    point: "201,424"
- inputText: "09:30"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/41-habit-filled
