appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "28,94"
- waitForAnimationToEnd
- tapOn:
    point: "361,818"
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: ".*Сповіщення.*"
    timeout: 15000
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/50-settings-notif
