appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "28,94"
- waitForAnimationToEnd
- tapOn:
    point: "120,818"
- waitForAnimationToEnd
- tapOn:
    point: "364,95"
- waitForAnimationToEnd
- tapOn:
    point: "229,263"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/55-meetings
