appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "201,466"
- inputText: "Аудит нарада"
- tapOn:
    point: "201,410"
- waitForAnimationToEnd
- swipe:
    start: "60,730"
    end: "60,430"
    duration: 600
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/61-mtg-scrolled
