appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "365,368"
- waitForAnimationToEnd
- tapOn:
    point: "38,94"
- waitForAnimationToEnd
- tapOn:
    point: "200,818"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/63-finance
