appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "120,818"
- waitForAnimationToEnd
- tapOn:
    point: "200,818"
- waitForAnimationToEnd
- tapOn:
    point: "195,738"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/71-after-remount
