appId: com.casper3.f-tracking-app
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    point: "200,818"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/74-fin-fresh
- tapOn:
    point: "195,738"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/74-tx-open
- tapOn:
    point: "201,578"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/74-after-newacc
- tapOn:
    point: "201,489"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/74-frozen
