appId: com.casper3.f-tracking-app
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    point: "361,818"
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: ".*Контейнери.*"
    timeout: 20000
- tapOn: ".*Контейнери.*"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/75-containers
