appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "360,443"
- waitForAnimationToEnd
- tapOn:
    point: "38,94"
- waitForAnimationToEnd
- tapOn:
    point: "120,818"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/e2e/77-dark-tasks
