appId: com.casper3.f-tracking-app
---
- tapOn: { point: "10%,93%" }
- tapOn: { point: "31%,93%" }
- tapOn: { point: "50%,93%" }
- tapOn: { point: "70%,93%" }
- tapOn: { point: "10%,93%" }
- tapOn: { point: "31%,93%" }
- tapOn: { point: "50%,93%" }
- tapOn: { point: "70%,93%" }
