appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "9%,11%"
- tapOn:
    point: "31%,93%"
- tapOn:
    point: "50%,55%"
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lang/perf/tm-detail2
