appId: com.casper3.f-tracking-app
---
- swipe:
    start: "50%,20%"
    end: "50%,95%"
- swipe:
    start: "50%,20%"
    end: "50%,95%"
- swipe:
    start: "50%,20%"
    end: "50%,95%"
- swipe:
    start: "50%,20%"
    end: "50%,95%"
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "Ідеї"
    direction: DOWN
- tapOn: "Ідеї"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lay/T06-ideas
- swipe:
    start: "1%,50%"
    end: "95%,50%"
- waitForAnimationToEnd
