appId: com.casper3.f-tracking-app
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    point: "88%,94%"
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "Бюджет"
    direction: DOWN
    visibilityPercentage: 60
- tapOn: "Бюджет"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lay/T01-budget
