appId: com.casper3.f-tracking-app
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    point: "30%,94%"
- waitForAnimationToEnd
- tapOn:
    point: "90%,11%"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lay/P00-menu
- tapOn: "Проєкти"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lay/P01-projects
