appId: com.casper3.f-tracking-app
---
- tapOn:
    point: "197,320"
- inputText: "Аудит L2"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lay/P18-name
- hideKeyboard
- waitForAnimationToEnd
- swipe:
    start: "50%,80%"
    end: "50%,40%"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/lay/P19-scrolled
